@@ -25,6 +25,15 @@
 package org.spongepowered.common.world.server;
 
 import com.google.common.collect.ImmutableList;
+<<<<<<< HEAD
+=======
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+import com.mojang.serialization.Dynamic;
+import com.mojang.serialization.DynamicOps;
+import com.mojang.serialization.JsonOps;
+>>>>>>> origin/api-9
 import com.mojang.serialization.Lifecycle;
 import it.unimi.dsi.fastutil.longs.LongIterator;
 import net.minecraft.CrashReport;
@@ -75,6 +84,8 @@ import org.spongepowered.api.event.SpongeEventFactory;
 import org.spongepowered.api.event.world.LoadWorldEvent;
 import org.spongepowered.api.event.world.UnloadWorldEvent;
 import org.spongepowered.api.scheduler.Task;
+import org.spongepowered.api.util.file.DeleteFileVisitor;
+import org.spongepowered.api.world.DefaultWorldKeys;
 import org.spongepowered.api.world.WorldType;
 import org.spongepowered.api.world.server.ServerWorld;
 import org.spongepowered.api.world.server.WorldManager;
@@ -98,6 +109,10 @@ import org.spongepowered.common.user.SpongeUserManager;
 import org.spongepowered.common.util.Constants;
 import org.spongepowered.common.util.FutureUtil;
 
+<<<<<<< HEAD
+=======
+import java.io.BufferedReader;
+>>>>>>> origin/api-9
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.FileVisitResult;
@@ -109,12 +124,14 @@ import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+<<<<<<< HEAD
 import java.util.OptionalLong;
+=======
+>>>>>>> origin/api-9
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
@@ -131,7 +148,7 @@ public abstract class SpongeWorldManager implements WorldManager {
     private final Path defaultWorldDirectory, customWorldsDirectory;
     private final Map<net.minecraft.resources.ResourceKey<Level>, ServerLevel> worlds;
 
-    private static final TicketType<ResourceLocation> SPAWN_CHUNKS = TicketType.create("spawn_chunks", (i, o) -> i.compareTo(o));
+    private static final TicketType<ResourceLocation> SPAWN_CHUNKS = TicketType.create("spawn_chunks", ResourceLocation::compareTo);
 
     public SpongeWorldManager(final MinecraftServer server) {
         this.server = server;
@@ -164,16 +181,7 @@ public abstract class SpongeWorldManager implements WorldManager {
     public Optional<Path> worldDirectory(final ResourceKey key) {
         Objects.requireNonNull(key, "key");
         
-        final Path directory;
-        if (Level.OVERWORLD.location().equals(key)) {
-            directory = this.defaultWorldDirectory;
-        } else if (Level.NETHER.location().equals(key)) {
-            directory = this.defaultWorldDirectory.resolve("DIM-1");
-        } else if (Level.END.location().equals(key)) {
-            directory = this.defaultWorldDirectory.resolve("DIM1");
-        } else {
-            directory = this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
-        }
+        Path directory = this.getDirectory(key);
         if (Files.notExists(directory)) {
             return Optional.empty();
         }
@@ -188,23 +196,23 @@ public abstract class SpongeWorldManager implements WorldManager {
     @Override
     public List<ResourceKey> worldKeys() {
         final List<ResourceKey> worldKeys = new ArrayList<>();
-        worldKeys.add((ResourceKey) (Object) Level.OVERWORLD.location());
+        worldKeys.add(DefaultWorldKeys.DEFAULT);
 
-        if (Files.exists(this.defaultWorldDirectory.resolve(this.getDirectoryName((ResourceKey) (Object) Level.NETHER.location())))) {
-            worldKeys.add((ResourceKey) (Object) Level.NETHER.location());
+        if (Files.exists(this.getDirectory(DefaultWorldKeys.THE_NETHER))) {
+            worldKeys.add(DefaultWorldKeys.THE_NETHER);
         }
 
-        if (Files.exists(this.defaultWorldDirectory.resolve(this.getDirectoryName((ResourceKey) (Object) Level.END.location())))) {
-            worldKeys.add((ResourceKey) (Object) Level.END.location());
+        if (Files.exists(this.getDirectory(DefaultWorldKeys.THE_END))) {
+            worldKeys.add(DefaultWorldKeys.THE_END);
         }
 
         try {
-            for (final Path namespacedDirectory : Files.walk(this.customWorldsDirectory, 1).collect(Collectors.toList())) {
+            for (final Path namespacedDirectory : Files.list(this.customWorldsDirectory).toList()) {
                 if (this.customWorldsDirectory.equals(namespacedDirectory)) {
                     continue;
                 }
 
-                for (final Path valueDirectory : Files.walk(namespacedDirectory, 1).collect(Collectors.toList())) {
+                for (final Path valueDirectory : Files.list(namespacedDirectory).toList()) {
                     if (namespacedDirectory.equals(valueDirectory)) {
                         continue;
                     }
@@ -220,6 +228,41 @@ public abstract class SpongeWorldManager implements WorldManager {
     }
 
     @Override
+<<<<<<< HEAD
+=======
+    public List<ResourceKey> templateKeys() {
+        final List<ResourceKey> templateKeys = new ArrayList<>();
+        // Treat Vanilla ones as template keys
+        templateKeys.add(WorldTypes.OVERWORLD.location());
+        templateKeys.add(WorldTypes.THE_NETHER.location());
+        templateKeys.add(WorldTypes.THE_END.location());
+
+        try (final Stream<Path> pluginDirectories = Files.list(this.getDimensionDataPackDirectory())) {
+            pluginDirectories
+                    .filter(Files::isDirectory)
+                    .forEach(pluginDirectory -> {
+                                final Path dimensionPath = pluginDirectory.resolve("dimension");
+                                if (Files.isDirectory(dimensionPath)) {
+                                    try (final Stream<Path> pluginTemplates = Files.list(dimensionPath)) {
+                                        pluginTemplates
+                                                .filter(template -> template.toString().endsWith(".json"))
+                                                .forEach(template -> templateKeys.add((ResourceKey) (Object) new ResourceLocation(pluginDirectory.getFileName().toString(),
+                                                        FilenameUtils.removeExtension(template.getFileName().toString()))));
+                                    } catch (final IOException e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                }
+                            }
+                    );
+        } catch (final IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        return templateKeys;
+    }
+
+    @Override
+>>>>>>> origin/api-9
     public boolean worldExists(final ResourceKey key) {
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(Objects.requireNonNull(key, "key"));
 
@@ -231,10 +274,7 @@ public abstract class SpongeWorldManager implements WorldManager {
             return true;
         }
 
-        final boolean isVanillaSubLevel = Level.NETHER.equals(registryKey) || Level.END.equals(registryKey);
-        final Path levelDirectory = isVanillaSubLevel ? this.defaultWorldDirectory.resolve(this.getDirectoryName(key)) :
-            this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
-        return Files.exists(levelDirectory);
+        return Files.exists(this.getDirectory(key));
     }
 
     @Override
@@ -261,8 +301,9 @@ public abstract class SpongeWorldManager implements WorldManager {
         final ResourceKey key = Objects.requireNonNull(template, "template").key();
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(key);
         if (Level.OVERWORLD.equals(registryKey)) {
-            FutureUtil.completedWithException(new IllegalArgumentException("The default world cannot be told to load!"));
+            return FutureUtil.completedWithException(new IllegalArgumentException("The default world cannot be told to load!"));
         }
+
         final ServerLevel serverWorld = this.worlds.get(registryKey);
         if (serverWorld != null) {
             return CompletableFuture.completedFuture((ServerWorld) serverWorld);
@@ -276,9 +317,8 @@ public abstract class SpongeWorldManager implements WorldManager {
     @Override
     public CompletableFuture<ServerWorld> loadWorld(final ResourceKey key) {
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(Objects.requireNonNull(key, "key"));
-
         if (Level.OVERWORLD.equals(registryKey)) {
-            FutureUtil.completedWithException(new IllegalArgumentException("The default world cannot be told to load!"));
+            return FutureUtil.completedWithException(new IllegalArgumentException("The default world cannot be told to load!"));
         }
 
         final ServerLevel world = this.worlds.get(registryKey);
@@ -286,12 +326,23 @@ public abstract class SpongeWorldManager implements WorldManager {
             return CompletableFuture.completedFuture((ServerWorld) world);
         }
 
+<<<<<<< HEAD
         // First find a loaded level-stem / To load based on a datapack load using the WorldTemplate instead
         final net.minecraft.resources.ResourceKey<LevelStem> rKey = net.minecraft.resources.ResourceKey.create(Registry.LEVEL_STEM_REGISTRY, (ResourceLocation) (Object) key);
         final LevelStem levelStem = this.server.getWorldData().worldGenSettings().dimensions().get(rKey);
         if (levelStem != null) {
             return this.loadWorld0(registryKey, levelStem);
         }
+=======
+        return this.loadTemplate(key).thenCompose(r -> {
+            WorldTemplate loadedTemplate = r.orElse(null);
+            if (loadedTemplate == null) {
+                final LevelStem scratch = BootstrapProperties.worldGenSettings.dimensions().get(SpongeWorldManager.createStemKey(key));
+                if (scratch != null) {
+                    ((ResourceKeyBridge) (Object) scratch).bridge$setKey(key);
+                    loadedTemplate = new SpongeWorldTemplate(scratch);
+                }
+>>>>>>> origin/api-9
 
         // Then attempt to load from data pack
         final DataPack<WorldTemplate> pack = this.findPack(key);
@@ -308,16 +359,30 @@ public abstract class SpongeWorldManager implements WorldManager {
         final DimensionType dimensionType = levelStem.typeHolder().value();
         final Optional<ResourceKey> worldTypeKey = this.worldTypeKey(dimensionType);
 
+<<<<<<< HEAD
         MinecraftServerAccessor.accessor$LOGGER().info("Loading world '{}' ({})", worldKey, worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+=======
+        final Holder<DimensionType> dimensionTypeHolder = template.typeHolder();
+        final WorldType worldType = (WorldType) dimensionTypeHolder.value();
+        final Optional<ResourceKey> worldTypeKey = RegistryTypes.WORLD_TYPE.get().findValueKey(worldType);
+
+        MinecraftServerAccessor.accessor$LOGGER().info("Loading world '{}' ({})", worldKey, worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+        final String directoryName = this.getDirectoryName(worldKey);
+        final LevelStorageSource.LevelStorageAccess storageSource;
+>>>>>>> origin/api-9
 
         final ServerLevel world;
         try {
+<<<<<<< HEAD
             world = this.createLevel(registryKey, levelStem, worldKey, worldTypeKey.orElse(null));
+=======
+            storageSource = this.createStorageSource(worldKey);
+>>>>>>> origin/api-9
         } catch (final IOException e) {
-            e.printStackTrace();
             return FutureUtil.completedWithException(new RuntimeException(String.format("Failed to create level data for world '%s'!", worldKey), e));
         }
 
+<<<<<<< HEAD
         return SpongeCommon.asyncScheduler().submit(() -> this.prepareWorld(world)).thenApply(w -> {
             ((MinecraftServerAccessor) this.server).invoker$forceDifficulty();
             return w;
@@ -347,6 +412,47 @@ public abstract class SpongeWorldManager implements WorldManager {
                 commands == null ? defaultLevelData.getAllowCommands() : commands,
                 new GameRules(),
                 defaultLevelData.getDataPackConfig());
+=======
+        PrimaryLevelData levelData;
+
+        levelData = (PrimaryLevelData) storageSource.getDataTag((DynamicOps<Tag>) BootstrapProperties.worldSettingsAdapter, defaultLevelSettings.getDataPackConfig(), Lifecycle.stable());
+        if (levelData == null) {
+            final LevelSettings levelSettings;
+            final WorldGenSettings generationSettings;
+
+            if (this.server.isDemo()) {
+                levelSettings = MinecraftServer.DEMO_SETTINGS;
+                generationSettings = WorldGenSettings.demoSettings(BootstrapProperties.registries);
+            } else {
+                levelSettings = new LevelSettings(directoryName, (GameType) (Object) BootstrapProperties.gameMode.get(Sponge.game()),
+                        templateBridge.bridge$hardcore().orElse(BootstrapProperties.hardcore), (Difficulty) (Object) BootstrapProperties.difficulty
+                        .get(Sponge.game()), templateBridge.bridge$commands().orElse(BootstrapProperties.commands), new GameRules(),
+                    defaultLevelData.getDataPackConfig());
+                generationSettings = generatorSettings;
+            }
+
+            levelData = new PrimaryLevelData(levelSettings, generationSettings, Lifecycle.stable());
+        }
+
+        ((PrimaryLevelDataBridge) levelData).bridge$populateFromDimension(template);
+
+        final InheritableConfigHandle<WorldConfig> configAdapter = SpongeGameConfigs.createWorld(worldTypeKey.orElse(null), worldKey);
+        ((PrimaryLevelDataBridge) levelData).bridge$configAdapter(configAdapter);
+
+        levelData.setModdedInfo(this.server.getServerModName(), this.server.getModdedStatus().shouldReportAsModified());
+        final boolean isDebugGeneration = levelData.worldGenSettings().isDebug();
+        final long seed = BiomeManager.obfuscateSeed(levelData.worldGenSettings().seed());
+
+        final ChunkProgressListener chunkStatusListener = ((MinecraftServerAccessor) this.server).accessor$progressListenerFactory().create(11);
+
+        final ServerLevel world = new ServerLevel(this.server, ((MinecraftServerAccessor) this.server).accessor$executor(), storageSource, levelData,
+                registryKey, dimensionTypeHolder, chunkStatusListener, template.generator(), isDebugGeneration, seed, ImmutableList.of(), true);
+        this.worlds.put(registryKey, world);
+
+        this.prepareWorld(world, isDebugGeneration);
+        ((MinecraftServerAccessor) this.server).invoker$forceDifficulty();
+        return this.postWorldLoad(world, false).thenApply(w -> (org.spongepowered.api.world.server.ServerWorld) w);
+>>>>>>> origin/api-9
     }
 
     @Override
@@ -377,17 +483,57 @@ public abstract class SpongeWorldManager implements WorldManager {
             return CompletableFuture.completedFuture(false);
         }
 
-        return CompletableFuture.supplyAsync(() -> {
-            try {
-                this.unloadWorld0((ServerLevel) world);
-            } catch (final IOException e) {
-                return false;
-            }
-            return true;
-        }, SpongeCommon.server());
+        try {
+            this.unloadWorld0((ServerLevel) world);
+            return CompletableFuture.completedFuture(true);
+        } catch (final IOException e) {
+            return FutureUtil.completedWithException(e);
+        }
     }
 
     @Override
+<<<<<<< HEAD
+=======
+    public boolean templateExists(final ResourceKey key) {
+        return Files.exists(this.getDataPackFile(Objects.requireNonNull(key, "key")));
+    }
+
+    @Override
+    public CompletableFuture<Optional<WorldTemplate>> loadTemplate(final ResourceKey key) {
+        final Path dataPackFile = this.getDataPackFile(Objects.requireNonNull(key, "key"));
+        if (Files.exists(dataPackFile)) {
+            try (final BufferedReader reader = Files.newBufferedReader(dataPackFile)) {
+                final LevelStem template = SpongeWorldManager.stemFromJson(key, JsonParser.parseReader(reader));
+                return CompletableFuture.completedFuture(Optional.of(((LevelStemBridge) (Object) template).bridge$asTemplate()));
+            } catch (final IOException e) {
+                return FutureUtil.completedWithException(e);
+            }
+        }
+
+        return CompletableFuture.completedFuture(Optional.empty());
+    }
+
+    @Override
+    public CompletableFuture<Boolean> saveTemplate(final WorldTemplate template) {
+        final LevelStem scratch = ((SpongeWorldTemplate) Objects.requireNonNull(template, "template")).asLevelStem();
+        try {
+            final JsonElement element = SpongeWorldManager.stemToJson(scratch);
+            this.writeTemplate(element, template.key());
+        } catch (final Exception ex) {
+            return FutureUtil.completedWithException(ex);
+        }
+        return CompletableFuture.completedFuture(true);
+    }
+
+    private void writeTemplate(final JsonElement element, final ResourceKey key) throws IOException {
+        final Path dataPackFile = this.getDataPackFile(key);
+        Files.createDirectories(dataPackFile.getParent());
+        DataPackSerializer.writeFile(dataPackFile, element);
+        DataPackSerializer.writePackMetadata("World", this.dimensionsDataPackDirectory.getParent());
+    }
+
+    @Override
+>>>>>>> origin/api-9
     public CompletableFuture<Optional<ServerWorldProperties>> loadProperties(final ResourceKey key) {
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(Objects.requireNonNull(key, "key"));
 
@@ -399,6 +545,7 @@ public abstract class SpongeWorldManager implements WorldManager {
             return CompletableFuture.completedFuture(Optional.empty());
         }
 
+<<<<<<< HEAD
         final boolean isVanillaWorld = this.isVanillaWorld(key);
         final LevelStorageSource.LevelStorageAccess storageSource;
 
@@ -408,9 +555,12 @@ public abstract class SpongeWorldManager implements WorldManager {
             return FutureUtil.completedWithException(e);
         }
 
+=======
+>>>>>>> origin/api-9
         final WorldData levelData;
-        try {
+        try (final LevelStorageSource.LevelStorageAccess storageSource = this.createStorageSource(key)) {
             final PrimaryLevelData defaultLevelData = (PrimaryLevelData) this.server.getWorldData();
+<<<<<<< HEAD
             try {
                 levelData = this.loadLevelData(defaultLevelData.getDataPackConfig(), storageSource);
             } catch (final Exception ex) {
@@ -430,6 +580,26 @@ public abstract class SpongeWorldManager implements WorldManager {
                 final LevelStem scratch = ((SpongeWorldTemplate) template).levelStem();
                 ((PrimaryLevelDataBridge) levelData).bridge$populateFromLevelStem(scratch);
             });
+=======
+            final LevelSettings defaultLevelSettings = ((PrimaryLevelDataAccessor) defaultLevelData).accessor$settings();
+
+            levelData = storageSource.getDataTag((DynamicOps<Tag>) BootstrapProperties.worldSettingsAdapter, defaultLevelSettings.getDataPackConfig(), Lifecycle.stable());
+        } catch (final Exception ex) {
+            return FutureUtil.completedWithException(ex);
+        }
+
+        if (levelData == null) {
+            return CompletableFuture.completedFuture(Optional.empty());
+        }
+
+        return this.loadTemplate(key).thenCompose(template -> {
+            if (template.isPresent()) {
+                final LevelStem scratch = ((SpongeWorldTemplate) template.get()).asLevelStem();
+                ((PrimaryLevelDataBridge) levelData).bridge$populateFromDimension(scratch);
+            } else {
+                ((ResourceKeyBridge) levelData).bridge$setKey(key);
+            }
+>>>>>>> origin/api-9
 
             return CompletableFuture.completedFuture(Optional.of((ServerWorldProperties) levelData));
         });
@@ -443,9 +613,17 @@ public abstract class SpongeWorldManager implements WorldManager {
             return CompletableFuture.completedFuture(false);
         }
 
+<<<<<<< HEAD
         try {
             this.saveLevelDat((WorldData) properties, properties.key());
         } catch (Exception ex) {
+=======
+        final ResourceKey key = properties.key();
+
+        try (final LevelStorageSource.LevelStorageAccess storageSource = this.createStorageSource(key)) {
+            storageSource.saveDataTag(BootstrapProperties.registries, (WorldData) properties, null);
+        } catch (final Exception ex) {
+>>>>>>> origin/api-9
             return FutureUtil.completedWithException(ex);
         }
 
@@ -472,9 +650,8 @@ public abstract class SpongeWorldManager implements WorldManager {
     @Override
     public CompletableFuture<Boolean> copyWorld(final ResourceKey key, final ResourceKey copyKey) {
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(Objects.requireNonNull(key, "key"));
-        final net.minecraft.resources.ResourceKey<Level> copyRegistryKey = SpongeWorldManager.createRegistryKey(Objects.requireNonNull(copyKey, "copyKey"));
 
-        if (Level.OVERWORLD.equals(copyRegistryKey)) {
+        if (DefaultWorldKeys.DEFAULT.equals(copyKey)) {
             return CompletableFuture.completedFuture(false);
         }
 
@@ -495,18 +672,10 @@ public abstract class SpongeWorldManager implements WorldManager {
             loadedWorld.noSave = true;
         }
 
-        final boolean isDefaultWorld = this.isDefaultWorld(key);
-        final boolean isVanillaWorld = this.isVanillaWorld(key);
-        final String directoryName = this.getDirectoryName(key);
+        final boolean isDefaultWorld = DefaultWorldKeys.DEFAULT.equals(key);
 
-        final Path originalDirectory = isDefaultWorld ? this.defaultWorldDirectory : isVanillaWorld ? this.defaultWorldDirectory
-                .resolve(directoryName) : this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
-
-        final boolean isVanillaCopyWorld = this.isVanillaWorld(copyKey);
-        final String copyDirectoryName = this.getDirectoryName(copyKey);
-
-        final Path copyDirectory = isVanillaCopyWorld ? this.defaultWorldDirectory
-                .resolve(copyDirectoryName) : this.customWorldsDirectory.resolve(copyKey.namespace()).resolve(copyKey.value());
+        final Path originalDirectory = this.getDirectory(key);
+        final Path copyDirectory = this.getDirectory(copyKey);
 
         try {
             Files.walkFileTree(originalDirectory, new SimpleFileVisitor<Path>() {
@@ -548,7 +717,7 @@ public abstract class SpongeWorldManager implements WorldManager {
         } catch (final IOException e) {
             // Bail the whole deal if we hit IO problems!
             try {
-                Files.deleteIfExists(copyDirectory);
+                Files.walkFileTree(copyDirectory, DeleteFileVisitor.INSTANCE);
             } catch (final IOException ignore) {
             }
 
@@ -559,12 +728,45 @@ public abstract class SpongeWorldManager implements WorldManager {
             loadedWorld.noSave = disableLevelSaving;
         }
 
+<<<<<<< HEAD
         try {
             this.server().dataPackManager().copy(this.findPack(key), key, copyKey);
+=======
+        final Path configFile = this.getConfigFile(key);
+        final Path copiedConfigFile = this.getConfigFile(copyKey);
+
+        try {
+            Files.createDirectories(copiedConfigFile.getParent());
+            Files.copy(configFile, copiedConfigFile, StandardCopyOption.REPLACE_EXISTING);
+>>>>>>> origin/api-9
         } catch (final IOException e) {
             return FutureUtil.completedWithException(e);
         }
 
+<<<<<<< HEAD
+=======
+        final JsonElement template;
+        if (this.isVanillaWorld(key)) {
+            final LevelStem stem = this.server.getWorldData().worldGenSettings().dimensions().get(SpongeWorldManager.createStemKey(key));
+            template = SpongeWorldManager.stemToJson(stem);
+        } else {
+            try (final BufferedReader reader = Files.newBufferedReader(this.getDataPackFile(key))) {
+                template = JsonParser.parseReader(reader);
+            } catch (final IOException e) {
+                return FutureUtil.completedWithException(e);
+            }
+        }
+
+        final JsonObject spongeData = template.getAsJsonObject().getAsJsonObject("#sponge");
+        spongeData.remove("unique_id");
+
+        try {
+            this.writeTemplate(template, copyKey);
+        } catch (final IOException e) {
+            return FutureUtil.completedWithException(e);
+        }
+
+>>>>>>> origin/api-9
         return CompletableFuture.completedFuture(true);
     }
 
@@ -593,42 +795,52 @@ public abstract class SpongeWorldManager implements WorldManager {
             }
         }
 
-        final boolean isVanillaWorld = this.isVanillaWorld(key);
-        final String directoryName = this.getDirectoryName(key);
-
-        final Path originalDirectory = isVanillaWorld ? this.defaultWorldDirectory
-                .resolve(directoryName) : this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
-
-        final boolean isVanillaMoveWorld = this.isVanillaWorld(movedKey);
-        final String moveDirectoryName = this.getDirectoryName(movedKey);
-
-        final Path moveDirectory = isVanillaMoveWorld ? this.defaultWorldDirectory
-                .resolve(moveDirectoryName) : this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
+        final Path originalDirectory = this.getDirectory(key);
+        final Path movedDirectory = this.getDirectory(movedKey);
 
         try {
-            Files.createDirectories(moveDirectory);
-            Files.move(originalDirectory, moveDirectory, StandardCopyOption.REPLACE_EXISTING);
+            Files.createDirectories(movedDirectory);
+            Files.move(originalDirectory, movedDirectory, StandardCopyOption.REPLACE_EXISTING);
         } catch (final IOException e) {
             return FutureUtil.completedWithException(e);
         }
 
-        final Path configFile = SpongeCommon.spongeConfigDirectory().resolve(Launch.instance().id()).resolve("worlds").resolve(key
-                .namespace()).resolve(key.value() + ".conf");
-
-        final Path copiedConfigFile = SpongeCommon.spongeConfigDirectory().resolve(Launch.instance().id()).resolve("worlds")
-                .resolve(movedKey.namespace()).resolve(movedKey.value() + ".conf");
+        final Path configFile = this.getConfigFile(key);
+        final Path movedConfigFile = this.getConfigFile(movedKey);
 
         try {
-            Files.createDirectories(copiedConfigFile.getParent());
-            Files.move(configFile, copiedConfigFile, StandardCopyOption.REPLACE_EXISTING);
+            Files.createDirectories(movedConfigFile.getParent());
+            Files.move(configFile, movedConfigFile, StandardCopyOption.REPLACE_EXISTING);
         } catch (final IOException e) {
             return FutureUtil.completedWithException(e);
         }
 
+<<<<<<< HEAD
         try {
             this.server().dataPackManager().move(this.findPack(key), key, movedKey);
         } catch (final IOException e) {
             return FutureUtil.completedWithException(e);
+=======
+        if (this.isVanillaWorld(key)) {
+            final LevelStem stem = this.server.getWorldData().worldGenSettings().dimensions().get(SpongeWorldManager.createStemKey(key));
+            final JsonElement template = SpongeWorldManager.stemToJson(stem);
+
+            try {
+                this.writeTemplate(template, movedKey);
+            } catch (final IOException e) {
+                return FutureUtil.completedWithException(e);
+            }
+        } else {
+            final Path dimensionTemplate = this.getDataPackFile(key);
+            final Path movedDimensionTemplate = this.getDataPackFile(movedKey);
+
+            try {
+                Files.createDirectories(movedDimensionTemplate.getParent());
+                Files.move(dimensionTemplate, movedDimensionTemplate, StandardCopyOption.REPLACE_EXISTING);
+            } catch (final IOException e) {
+                return FutureUtil.completedWithException(e);
+            }
+>>>>>>> origin/api-9
         }
 
         return CompletableFuture.completedFuture(true);
@@ -658,30 +870,26 @@ public abstract class SpongeWorldManager implements WorldManager {
             }
         }
 
-        final boolean isVanillaWorld = this.isVanillaWorld(key);
-        final String directoryName = this.getDirectoryName(key);
-
-        final Path directory = isVanillaWorld ? this.defaultWorldDirectory.resolve(directoryName) : this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
-
+        final Path directory = this.getDirectory(key);
         if (Files.exists(directory)) {
             try {
-                for (final Path path : Files.walk(directory).sorted(Comparator.reverseOrder()).collect(Collectors.toList())) {
-                    Files.deleteIfExists(path);
-                }
+                Files.walkFileTree(directory, DeleteFileVisitor.INSTANCE);
             } catch (final IOException e) {
                 return FutureUtil.completedWithException(e);
             }
         }
 
-        final Path configFile = SpongeCommon.spongeConfigDirectory().resolve(Launch.instance().id()).resolve("worlds").resolve(key.namespace())
-            .resolve(key.value() + ".conf");
-
+        final Path configFile = this.getConfigFile(key);
         try {
             Files.deleteIfExists(configFile);
         } catch (final IOException e) {
             return FutureUtil.completedWithException(e);
         }
 
+<<<<<<< HEAD
+=======
+        final Path dimensionTemplate = this.getDataPackFile(key);
+>>>>>>> origin/api-9
         try {
             this.server().dataPackManager().delete(this.findPack(key), key);
         } catch (final IOException e) {
@@ -702,7 +910,12 @@ public abstract class SpongeWorldManager implements WorldManager {
             throw new IOException(String.format("World '%s' was told to unload but players remain.", registryKey.location()));
         }
 
+<<<<<<< HEAD
         SpongeCommon.logger().info("Unloading world '{}' ({})", registryKey.location(), this.worldTypeKey(world.dimensionType()).map(ResourceKey::toString).orElse("inline"));
+=======
+        final Optional<ResourceKey> worldTypeKey = RegistryTypes.WORLD_TYPE.get().findValueKey((WorldType) world.dimensionType());
+        SpongeCommon.logger().info("Unloading world '{}' ({})", registryKey.location(), worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+>>>>>>> origin/api-9
 
         final UnloadWorldEvent unloadWorldEvent = SpongeEventFactory.createUnloadWorldEvent(PhaseTracker.getCauseStackManager().currentCause(), (ServerWorld) world);
         SpongeCommon.post(unloadWorldEvent);
@@ -732,10 +945,18 @@ public abstract class SpongeWorldManager implements WorldManager {
                     + "Multi-World support has been disabled and no worlds besides the default world will be loaded.");
         }
 
+<<<<<<< HEAD
         for (final Map.Entry<net.minecraft.resources.ResourceKey<LevelStem>, LevelStem> entry : this.server.getWorldData().worldGenSettings().dimensions().entrySet()) {
             final ResourceKey worldKey = (ResourceKey) (Object) entry.getKey().location();
+=======
+        for (final RegistryEntry<LevelStem> entry : ((Registry<LevelStem>) templates).streamEntries().collect(Collectors.toList())) {
+            final ResourceKey worldKey = entry.key();
+            final LevelStem template = entry.value();
+            final LevelStemBridge templateBridge = (LevelStemBridge) (Object) template;
+            ((ResourceKeyBridge) templateBridge).bridge$setKey(worldKey);
+>>>>>>> origin/api-9
 
-            final boolean isDefaultWorld = this.isDefaultWorld(worldKey);
+            final boolean isDefaultWorld = DefaultWorldKeys.DEFAULT.equals(worldKey);
             if (!isDefaultWorld && !multiworldEnabled) {
                 continue;
             }
@@ -744,12 +965,27 @@ public abstract class SpongeWorldManager implements WorldManager {
             final DimensionType dimensionType = template.typeHolder().value();
             final Optional<ResourceKey> worldTypeKey = this.worldTypeKey(dimensionType);
 
+<<<<<<< HEAD
+=======
+            final Holder<DimensionType> dimensionTypeHolder = template.typeHolder();
+            final WorldType worldType = (WorldType) dimensionTypeHolder.value();
+            final Optional<ResourceKey> worldTypeKey = RegistryTypes.WORLD_TYPE.get().findValueKey(worldType);
+
+            MinecraftServerAccessor.accessor$LOGGER().info("Loading world '{}' ({})", worldKey, worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+>>>>>>> origin/api-9
             if (!isDefaultWorld && !templateBridge.bridge$loadOnStartup()) {
                 SpongeCommon.logger().warn("World '{}' has been disabled from loading at startup. Skipping...", worldKey);
                 continue;
             }
+<<<<<<< HEAD
             MinecraftServerAccessor.accessor$LOGGER().info("Loading world '{}' ({})", worldKey, worldTypeKey.map(ResourceKey::toString).orElse("inline"));
             final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(worldKey);
+=======
+
+            final String directoryName = this.getDirectoryName(worldKey);
+            final LevelStorageSource.LevelStorageAccess storageSource;
+
+>>>>>>> origin/api-9
             if (isDefaultWorld) {
                 final LevelStorageSource.LevelStorageAccess storageSource = ((MinecraftServerAccessor) this.server).accessor$storageSource();
                 final PrimaryLevelData levelData = (PrimaryLevelData) this.server.getWorldData();
@@ -762,14 +998,83 @@ public abstract class SpongeWorldManager implements WorldManager {
                 this.prepareWorld(world);
             } else {
                 try {
+<<<<<<< HEAD
                     final ServerLevel world = this.createLevel(registryKey, template, worldKey, worldTypeKey.orElse(null));
                     // Ensure that the world border is registered.
                     world.getWorldBorder().applySettings(((PrimaryLevelData) world.getLevelData()).getWorldBorder());
                     this.prepareWorld(world);
+=======
+                    storageSource = this.createStorageSource(worldKey);
+>>>>>>> origin/api-9
                 } catch (final IOException e) {
                     throw new RuntimeException(String.format("Failed to create level data for world '%s'!", worldKey), e);
                 }
             }
+<<<<<<< HEAD
+=======
+
+            PrimaryLevelData levelData;
+            final boolean isDebugGeneration;
+
+            if (isDefaultWorld) {
+                levelData = defaultLevelData;
+                isDebugGeneration = defaultGenerationSettings.isDebug();
+            } else {
+                levelData = (PrimaryLevelData) storageSource
+                        .getDataTag((DynamicOps<Tag>) BootstrapProperties.worldSettingsAdapter, defaultLevelSettings.getDataPackConfig(), Lifecycle.stable());
+                if (levelData == null) {
+                    final LevelSettings levelSettings;
+                    final WorldGenSettings generationSettings;
+
+                    if (this.server.isDemo()) {
+                        levelSettings = MinecraftServer.DEMO_SETTINGS;
+                        generationSettings = WorldGenSettings.demoSettings(BootstrapProperties.registries);
+                    } else {
+                        levelSettings = new LevelSettings(directoryName,
+                                (GameType) (Object) BootstrapProperties.gameMode.get(Sponge.game()),
+                                templateBridge.bridge$hardcore().orElse(BootstrapProperties.hardcore),
+                                (Difficulty) (Object) BootstrapProperties.difficulty.get(Sponge.game()),
+                                templateBridge.bridge$commands().orElse(BootstrapProperties.commands), new GameRules(), defaultLevelData.getDataPackConfig());
+                        generationSettings = ((WorldGenSettingsBridge) defaultLevelData.worldGenSettings()).bridge$copy();
+                    }
+
+                    isDebugGeneration = generationSettings.isDebug();
+
+                    ((DimensionGeneratorSettingsAccessor) generationSettings).accessor$dimensions(new MappedRegistry<>(
+                            net.minecraft.core.Registry.LEVEL_STEM_REGISTRY, Lifecycle.stable(), null));
+
+                    levelData = new PrimaryLevelData(levelSettings, generationSettings, Lifecycle.stable());
+                } else {
+                    isDebugGeneration = levelData.worldGenSettings().isDebug();
+                }
+            }
+
+            ((PrimaryLevelDataBridge) levelData).bridge$populateFromDimension(template);
+
+            final InheritableConfigHandle<WorldConfig> configAdapter = SpongeGameConfigs.createWorld(worldTypeKey.orElse(null), worldKey);
+            ((PrimaryLevelDataBridge) levelData).bridge$configAdapter(configAdapter);
+
+            levelData.setModdedInfo(this.server.getServerModName(), this.server.getModdedStatus().shouldReportAsModified());
+            final long seed = BiomeManager.obfuscateSeed(levelData.worldGenSettings().seed());
+
+            final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(worldKey);
+            final ChunkProgressListener chunkStatusListener = ((MinecraftServerAccessor) this.server).accessor$progressListenerFactory().create(11);
+            final List<CustomSpawner> spawners;
+            if (isDefaultWorld) {
+                spawners = ImmutableList.of(new PhantomSpawner(), new PatrolSpawner(), new CatSpawner(), new VillageSiege(), new WanderingTraderSpawner(levelData));
+            } else {
+                spawners = ImmutableList.of();
+            }
+
+            final ServerLevel world = new ServerLevel(this.server, ((MinecraftServerAccessor) this.server).accessor$executor(), storageSource, levelData,
+                    registryKey, dimensionTypeHolder, chunkStatusListener, template.generator(), isDebugGeneration, seed, spawners, true);
+            // Ensure that the world border is registered.
+            world.getWorldBorder().applySettings(levelData.getWorldBorder());
+
+            this.worlds.put(registryKey, world);
+
+            this.prepareWorld(world, isDebugGeneration);
+>>>>>>> origin/api-9
         }
 
         ((MinecraftServerAccessor) this.server).invoker$forceDifficulty();
@@ -786,6 +1091,7 @@ public abstract class SpongeWorldManager implements WorldManager {
         ((SpongeServer) SpongeCommon.server()).getPlayerDataManager().load();
     }
 
+<<<<<<< HEAD
     private PrimaryLevelData getOrCreateLevelData(final LevelStorageSource.LevelStorageAccess storageSource, final LevelStem levelStem, final String directoryName) {
         final PrimaryLevelData defaultLevelData = (PrimaryLevelData) this.server.getWorldData();
         @Nullable PrimaryLevelData levelData = this.loadLevelData(defaultLevelData.getDataPackConfig(), storageSource);
@@ -853,6 +1159,9 @@ public abstract class SpongeWorldManager implements WorldManager {
     }
 
     private ServerLevel prepareWorld(final ServerLevel world) {
+=======
+    private void prepareWorld(final ServerLevel world, final boolean isDebugGeneration) {
+>>>>>>> origin/api-9
         final boolean isDefaultWorld = Level.OVERWORLD.equals(world.dimension());
         final PrimaryLevelData levelData = (PrimaryLevelData) world.getLevelData();
         final PrimaryLevelDataBridge levelDataBridge = (PrimaryLevelDataBridge) levelData;
@@ -884,9 +1193,15 @@ public abstract class SpongeWorldManager implements WorldManager {
                     } else if (Level.END.equals(world.dimension())) {
                         levelData.setSpawn(ServerLevel.END_SPAWN_POINT, 0);
                     }
+<<<<<<< HEAD
                 } else {
                     final BlockPos pos = new BlockPos(levelData.getXSpawn(), levelData.getYSpawn(), levelData.getZSpawn());
                     MiscOverworldFeatures.BONUS_CHEST.value().place(world, world.getChunkSource().getGenerator(), world.random, pos);
+=======
+                } else if (levelData.worldGenSettings().generateBonusChest()) {
+                    MiscOverworldFeatures.BONUS_CHEST.value().place(world, world.getChunkSource().getGenerator(), world.random, new BlockPos(levelData.getXSpawn(),
+                            levelData.getYSpawn(),levelData.getZSpawn()));
+>>>>>>> origin/api-9
                 }
                 levelData.setInitialized(true);
                 if (isDebugGeneration) {
@@ -911,17 +1226,19 @@ public abstract class SpongeWorldManager implements WorldManager {
         if (levelData.getCustomBossEvents() != null) {
             ((ServerLevelBridge) world).bridge$getBossBarManager().load(levelData.getCustomBossEvents());
         }
-
-        return world;
     }
 
     private CompletableFuture<ServerLevel> postWorldLoad(final ServerLevel world, final boolean blocking) {
         final PrimaryLevelData levelData = (PrimaryLevelData) world.getLevelData();
         final PrimaryLevelDataBridge levelBridge = (PrimaryLevelDataBridge) levelData;
-        final boolean isDefaultWorld = this.isDefaultWorld((ResourceKey) (Object) world.dimension().location());
-        if (isDefaultWorld || levelBridge.bridge$performsSpawnLogic()) {
+        if (Level.OVERWORLD.equals(world.dimension()) || levelBridge.bridge$performsSpawnLogic()) {
+            final Optional<ResourceKey> worldTypeKey = RegistryTypes.WORLD_TYPE.get().findValueKey((WorldType) world.dimensionType());
             MinecraftServerAccessor.accessor$LOGGER().info("Preparing start region for world '{}' ({})", world.dimension().location(),
+<<<<<<< HEAD
                     this.worldTypeKey(world.dimensionType()).map(ResourceKey::toString).orElse("inline"));
+=======
+                    worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+>>>>>>> origin/api-9
             if (blocking) {
                 this.loadSpawnChunks(world);
                 return CompletableFuture.completedFuture(world); // Chunk are generated
@@ -956,8 +1273,14 @@ public abstract class SpongeWorldManager implements WorldManager {
                                 Sponge.server().scheduler().submit(Task.builder().plugin(Launch.instance().platformPlugin()).execute(() -> generationFuture.complete(world)).build());
                                 // Notify the future that we are done
                                 task.cancel(); // And cancel this task
+<<<<<<< HEAD
                                 MinecraftServerAccessor.accessor$LOGGER().info("Done preparing start region for world '{}' ({})", world.dimension().location(),
                                         this.worldTypeKey(world.dimensionType()).map(ResourceKey::toString).orElse("inline"));
+=======
+                                final Optional<ResourceKey> worldTypeKey = RegistryTypes.WORLD_TYPE.get().findValueKey((WorldType) world.dimensionType());
+                                MinecraftServerAccessor.accessor$LOGGER().info("Done preparing start region for world '{}' ({})", world
+                                        .dimension().location(), worldTypeKey.map(ResourceKey::toString).orElse("inline"));
+>>>>>>> origin/api-9
                             }
                         })
                         .interval(10, TimeUnit.MILLISECONDS)
@@ -1019,6 +1342,7 @@ public abstract class SpongeWorldManager implements WorldManager {
         }
     }
 
+<<<<<<< HEAD
     private CompletionStage<Boolean> saveTemplate(final WorldTemplate template) {
         return this.server().dataPackManager().save(template).thenApply(b -> true);
     }
@@ -1033,36 +1357,92 @@ public abstract class SpongeWorldManager implements WorldManager {
         return CompletableFuture.completedFuture(Optional.empty());
     }
 
+=======
+>>>>>>> origin/api-9
     public static net.minecraft.resources.ResourceKey<Level> createRegistryKey(final ResourceKey key) {
         return net.minecraft.resources.ResourceKey.create(Registry.DIMENSION_REGISTRY, (ResourceLocation) (Object) key);
     }
 
-    String getDirectoryName(final ResourceKey key) {
-        final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(key);
-        if (Level.OVERWORLD.equals(registryKey)) {
+    public static net.minecraft.resources.ResourceKey<LevelStem> createStemKey(final ResourceKey key) {
+        return net.minecraft.resources.ResourceKey.create(net.minecraft.core.Registry.LEVEL_STEM_REGISTRY, (ResourceLocation) (Object) key);
+    }
+
+    private static LevelStem stemFromJson(final ResourceKey key, final JsonElement element) throws IOException {
+        final LevelStem stem = LevelStem.CODEC.parse(
+                new Dynamic<>(RegistryOps.create(JsonOps.INSTANCE, BootstrapProperties.registries), element))
+                .getOrThrow(true, s -> {});
+        ((LevelStemBridge) (Object) stem).bridge$setFromSettings(false);
+        ((ResourceKeyBridge) (Object) stem).bridge$setKey(key);
+        return stem;
+    }
+
+    private static JsonElement stemToJson(final LevelStem stem) {
+        return LevelStem.CODEC.encodeStart(
+                RegistryOps.create(JsonOps.INSTANCE, BootstrapProperties.registries),
+                stem).getOrThrow(true, s -> {});
+    }
+
+    private LevelStorageSource.LevelStorageAccess createStorageSource(final ResourceKey key) throws IOException {
+        if (DefaultWorldKeys.DEFAULT.equals(key)) {
+            LevelStorageSource.createDefault(this.defaultWorldDirectory.getParent()).createAccess(this.defaultWorldDirectory.getFileName().toString());
+        }
+        if (DefaultWorldKeys.THE_NETHER.equals(key)) {
+            return LevelStorageSource.createDefault(this.defaultWorldDirectory).createAccess("DIM-1");
+        }
+        if (DefaultWorldKeys.THE_END.equals(key)) {
+            return LevelStorageSource.createDefault(this.defaultWorldDirectory).createAccess("DIM1");
+        }
+        return LevelStorageSource.createDefault(this.customWorldsDirectory).createAccess(key.namespace() + File.separator + key.value());
+    }
+
+    private String getDirectoryName(final ResourceKey key) {
+        if (DefaultWorldKeys.DEFAULT.equals(key)) {
             return "";
         }
-        if (Level.NETHER.equals(registryKey)) {
+        if (DefaultWorldKeys.THE_NETHER.equals(key)) {
             return "DIM-1";
         }
-        if (Level.END.equals(registryKey)) {
+        if (DefaultWorldKeys.THE_END.equals(key)) {
             return "DIM1";
         }
         return key.value();
     }
 
-    boolean isVanillaWorld(final ResourceKey key) {
-        final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(key);
-        return Level.OVERWORLD.equals(registryKey) || Level.NETHER.equals(registryKey) || Level.END.equals(registryKey);
+    private Path getDirectory(final ResourceKey key) {
+        if (DefaultWorldKeys.DEFAULT.equals(key)) {
+            return this.defaultWorldDirectory;
+        }
+        if (DefaultWorldKeys.THE_NETHER.equals(key)) {
+            return this.defaultWorldDirectory.resolve("DIM-1");
+        }
+        if (DefaultWorldKeys.THE_END.equals(key)) {
+            return this.defaultWorldDirectory.resolve("DIM1");
+        }
+        return this.customWorldsDirectory.resolve(key.namespace()).resolve(key.value());
     }
 
-    boolean isVanillaSubWorld(final String directoryName) {
+    private boolean isVanillaWorld(final ResourceKey key) {
+        return DefaultWorldKeys.DEFAULT.equals(key) || DefaultWorldKeys.THE_NETHER.equals(key) || DefaultWorldKeys.THE_END.equals(key);
+    }
+
+    private boolean isVanillaSubWorld(final String directoryName) {
         return "DIM-1".equals(directoryName) || "DIM1".equals(directoryName);
     }
 
+<<<<<<< HEAD
     boolean isDefaultWorld(final ResourceKey key) {
         final net.minecraft.resources.ResourceKey<Level> registryKey = SpongeWorldManager.createRegistryKey(key);
         return Level.OVERWORLD.equals(registryKey);
     }
 
+=======
+    private Path getDataPackFile(final ResourceKey key) {
+        return this.getDimensionDataPackDirectory().resolve(key.namespace()).resolve("dimension").resolve(key.value() + ".json");
+    }
+
+    private Path getConfigFile(final ResourceKey key) {
+        return SpongeCommon.spongeConfigDirectory().resolve(Launch.instance().id()).resolve("worlds").resolve(key.namespace())
+                .resolve(key.value() + ".conf");
+    }
+>>>>>>> origin/api-9
 }
